--- a/DesignSytemCompleted.html
+++ b/DesignSytemCompleted.html
@@ -31,10 +31,10 @@
       <div class="color-palettes">
         <div class="primary-colors">
           <div class="color-swatch" style="background-color: #FFC107;">Primary Color 1</div>
-          <div class="color-swatch" style="background-color: #1e8006;">Primary Color 2</div>
+          <div class="color-swatch" style="background-color: #066e4f;">Primary Color 2</div>
         </div>
         <div class="secondary-colors">
-          <div class="color-swatch" style="background-color: #E0E0E0;">Secondary Color 1</div>
+          <div class="color-swatch" style="background-color: #d8d4d4;">Secondary Color 1</div>
           <div class="color-swatch" style="background-color: #FFEB3B;">Secondary Color 2</div>
         </div>
       </div>
@@ -71,7 +71,7 @@
       <div class="component-examples">
         <div class="card">
           <h3>Component Title</h3>
-          <p>Component content goes here.</p>
+          <p>I componenti vanno qui</p>
         </div>
       </div>
     </section>
