--- a/designSystemLogin.html
+++ b/designSystemLogin.html
@@ -10,6 +10,9 @@
         body {
             background-color: #f0f0f0; /* Changed from #D3D3D3 to a lighter grey color */
         }
+        .custom-button {
+            background-color: #066e4f;
+        }
     </style>
 </head>
 <body class="max-w-[430px] mx-auto text-black bg-cover bg-center">
@@ -33,12 +36,13 @@
             <input class="w-full p-3 border border-gray-200 rounded" placeholder="Password" type="password"/>
             <!-- Changed from border-gray-300 to border-gray-200 for a lighter grey color -->
         </div>
-        <button class="w-full p-3 bg-green-800 text-white rounded" type="submit">Login</button>
+        <button class="w-full p-3 text-white rounded custom-button" type="submit">Login</button>
     </form>
     <!-- Forgot Password Link -->
     <div class="mb-4">
         <a class="text-sm text-gray-400" href="#">Forgot password?</a>
         <!-- Changed from text-gray-600 to text-gray-400 for a lighter grey color -->
+    </div>
 </div>
 </body>
 </html>
