--- a/designSystemLogin.html
+++ b/designSystemLogin.html
@@ -23,7 +23,7 @@
     </div>
     <!-- Smart Serve Tagline -->
     <div class="mb-4 text-center">
-        <h2 class="text-2xl font-semibold">Quando Lavorare</h2>
+        <h2 class="text-2xl font-semibold">Resource Genie</h2>
         <p class="text-gray-400">Employee Scheduling</p>
     </div>
     <!-- Login Form -->
